Re-organise files

--- a/notebooks/1 - Application Package registration in a resource manager.ipynb
+++ b/notebooks/1 - Application Package registration in a resource manager.ipynb
@@ -18,7 +18,7 @@
     "import sys\n",
     "import yaml\n",
     "import os\n",
-    "from helpers import Atom\n",
+    "from utils.helpers import Atom\n",
     "from lxml import etree\n",
     "import datetime\n",
     "import hashlib\n",
@@ -45,7 +45,7 @@
    "source": [
     "# CWL file defining the application\n",
     "# ---------------------------------\n",
-    "application_package = 's-expression.cwl'\n",
+    "application_package = '../data/s-expression-cwl.cwl'\n",
     "# ---------------------------------\n",
     "with open(application_package, 'r') as stream:\n",
     "    try:\n",
