EOEPCA-289 add summary print of ID token (JWT)

--- a/demoroot/notebooks/Demo Client.ipynb
+++ b/demoroot/notebooks/Demo Client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "decreased-doctrine",
+   "id": "animal-webcam",
    "metadata": {},
    "source": [
     "## Using Demo Client\n",
@@ -12,16 +12,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "photographic-screen",
+   "id": "average-elements",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils.DemoClient as client"
+    "import utils.DemoClient as client\n",
+    "import jwt\n",
+    "import json"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "textile-event",
+   "id": "caroline-contest",
    "metadata": {},
    "source": [
     "## Client\n",
@@ -31,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "driving-journey",
+   "id": "liked-affair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-jurisdiction",
+   "id": "under-bristol",
    "metadata": {},
    "source": [
     "## User Authentication\n",
@@ -58,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cutting-accuracy",
+   "id": "worth-michael",
    "metadata": {
     "tags": []
    },
@@ -69,12 +71,17 @@
     "#-------------------------------------------------------------------------------\n",
     "USER_NAME=\"UserA\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
-    "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
+    "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "# summary print JWT\n",
+    "jwt_header = jwt.get_unverified_header(user_id_token)\n",
+    "jwt_payload = jwt.decode(user_id_token, options={\"verify_signature\": False})\n",
+    "print(\"user_id_token\\n=============\")\n",
+    "print(\"ID Token (JWT):\", user_id_token, \"\\n---\\nJWT Header:\", json.dumps(jwt_header, indent = 2), \"\\n---\\nJWT Payload:\", json.dumps(jwt_payload, indent = 2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fresh-pathology",
+   "id": "engaged-sunrise",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -84,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convenient-conviction",
+   "id": "transparent-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "least-monitor",
+   "id": "unexpected-emperor",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -109,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "changing-prescription",
+   "id": "given-heading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-adolescent",
+   "id": "compact-serum",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -128,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neutral-notification",
+   "id": "serial-vegetable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optical-postage",
+   "id": "tutorial-choir",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -147,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-hurricane",
+   "id": "fancy-modification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dental-alcohol",
+   "id": "smooth-cleveland",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -166,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "painted-favorite",
+   "id": "higher-photograph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-timber",
+   "id": "tender-offer",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -185,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "basic-intensity",
+   "id": "united-shipping",
    "metadata": {},
    "outputs": [],
    "source": [
