EOEPCA-289 enhanced summary of Process List response

--- a/demoroot/notebooks/Demo Client.ipynb
+++ b/demoroot/notebooks/Demo Client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "animal-webcam",
+   "id": "champion-sequence",
    "metadata": {},
    "source": [
     "## Using Demo Client\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "average-elements",
+   "id": "likely-universal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caroline-contest",
+   "id": "reasonable-charge",
    "metadata": {},
    "source": [
     "## Client\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liked-affair",
+   "id": "extensive-peeing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "under-bristol",
+   "id": "german-consciousness",
    "metadata": {},
    "source": [
     "## User Authentication\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worth-michael",
+   "id": "accepted-clothing",
    "metadata": {
     "tags": []
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaged-sunrise",
+   "id": "secure-friend",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "transparent-counter",
+   "id": "vocational-booking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-emperor",
+   "id": "toxic-musical",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "given-heading",
+   "id": "bored-puzzle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compact-serum",
+   "id": "wooden-glossary",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -135,17 +135,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "serial-vegetable",
+   "id": "indian-contrast",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - List Processes\n",
-    "response, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)"
+    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "process_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "precious-genesis",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summary print access token\n",
+    "token_payload = jwt.decode(ades_access_token, options={\"verify_signature\": False})\n",
+    "print(\"ades_access_token\\n=============\")\n",
+    "print(\"Token Payload:\", json.dumps(token_payload, indent = 2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "tutorial-choir",
+   "id": "wrapped-paragraph",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -154,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fancy-modification",
+   "id": "solved-rolling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smooth-cleveland",
+   "id": "supposed-tactics",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -173,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "higher-photograph",
+   "id": "interior-arizona",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-offer",
+   "id": "square-order",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -192,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "united-shipping",
+   "id": "early-decline",
    "metadata": {},
    "outputs": [],
    "source": [
