EOEPCA-289 improve logging of http requests

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "champion-sequence",
+   "id": "rapid-place",
    "metadata": {},
    "source": [
-    "## Using Demo Client\n",
-    "Interaction with EOEPCA endpoint using python Demo Client."
+    "# Processing\n",
+    "Demonstration of Processing endpoints."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "likely-universal",
+   "id": "altered-salon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reasonable-charge",
+   "id": "revolutionary-warning",
    "metadata": {},
    "source": [
-    "## Client\n",
+    "## Initialise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "enclosed-split",
+   "metadata": {},
+   "source": [
+    "### Client\n",
     "We instantiate a client to interact with the platform. The client dynamically registers with the Authorisation Server to take part in UMA (User Managed Access) flows through which authorization is obtained for scoped access resources on behalf of the user."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extensive-peeing",
+   "id": "conceptual-sheep",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +58,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "german-consciousness",
+   "id": "armed-dryer",
    "metadata": {},
    "source": [
-    "## User Authentication\n",
-    "The user authentication is represented by an ID Token (JWT), that is used to identify the user in UMA authorization flows."
+    "### User\n",
+    "User authenticates and the client receives an ID Token (JWT) that represents the user."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepted-clothing",
+   "id": "presidential-kenya",
    "metadata": {
     "tags": []
    },
@@ -71,17 +79,12 @@
     "#-------------------------------------------------------------------------------\n",
     "USER_NAME=\"UserA\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
-    "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
-    "# summary print JWT\n",
-    "jwt_header = jwt.get_unverified_header(user_id_token)\n",
-    "jwt_payload = jwt.decode(user_id_token, options={\"verify_signature\": False})\n",
-    "print(\"user_id_token\\n=============\")\n",
-    "print(\"ID Token (JWT):\", user_id_token, \"\\n---\\nJWT Header:\", json.dumps(jwt_header, indent = 2), \"\\n---\\nJWT Payload:\", json.dumps(jwt_payload, indent = 2))"
+    "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "secure-friend",
+   "id": "institutional-respondent",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -91,23 +94,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vocational-booking",
+   "id": "reserved-clothing",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ADES URLs\n",
-    "ades_url = \"http://ades.\" + platform_domain\n",
-    "ades_user = USER_NAME\n",
-    "ades_user_prefix = \"/\" + ades_user\n",
-    "ades_wps_url = ades_url + ades_user_prefix + \"/zoo\"\n",
-    "ades_proc_url = ades_url + ades_user_prefix + \"/wps3\"\n",
-    "print(\"ADES WPS endpoint: \", ades_wps_url)\n",
-    "print(\"ADES API Processes endpoint: \", ades_proc_url)"
+    "ades_wps_url = \"http://ades.\" + platform_domain + \"/\" + USER_NAME + \"/zoo\"; print(\"ADES WPS endpoint:\", ades_wps_url)\n",
+    "ades_proc_url = \"http://ades.\" + platform_domain + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "toxic-musical",
+   "id": "going-progress",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -116,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bored-puzzle",
+   "id": "preliminary-recommendation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wooden-glossary",
+   "id": "equivalent-grill",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -135,31 +133,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indian-contrast",
+   "id": "governing-scottish",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - List Processes\n",
     "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
-    "process_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "precious-genesis",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# summary print access token\n",
-    "token_payload = jwt.decode(ades_access_token, options={\"verify_signature\": False})\n",
-    "print(\"ades_access_token\\n=============\")\n",
-    "print(\"Token Payload:\", json.dumps(token_payload, indent = 2))"
+    "print(\"Processes:\", process_ids)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-paragraph",
+   "id": "periodic-clock",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -168,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "solved-rolling",
+   "id": "induced-train",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +162,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "instrumental-investor",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Check deploy - list processes again\n",
+    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(\"Processes:\", process_ids)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "supposed-tactics",
+   "id": "nasty-talent",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -187,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interior-arizona",
+   "id": "protected-chair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-order",
+   "id": "indian-kazakhstan",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -206,12 +205,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "early-decline",
+   "id": "historic-columbus",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - Undeploy Application\n",
     "response, ades_access_token = demo.proc_undeploy_application(ades_proc_url, app_name, id_token=user_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "supposed-found",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Check undeploy - list processes\n",
+    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(\"Processes:\", process_ids)"
    ]
   }
  ],
