EOEPCA-289 improve demo logging

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "descending-conflict",
+   "id": "universal-conducting",
    "metadata": {},
    "source": [
     "# Processing\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-discrimination",
+   "id": "aerial-cabin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worse-narrow",
+   "id": "affected-error",
    "metadata": {},
    "source": [
     "## Initialise"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "oriental-demographic",
+   "id": "piano-alias",
    "metadata": {},
    "source": [
     "### Client\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "floating-smell",
+   "id": "shared-notebook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "positive-brand",
+   "id": "patient-wedding",
    "metadata": {},
    "source": [
     "### User\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liberal-communications",
+   "id": "driven-medication",
    "metadata": {
     "tags": []
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infrared-green",
+   "id": "distinguished-fitting",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -94,18 +94,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-venue",
+   "id": "changed-exercise",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ADES URLs\n",
-    "ades_wps_url = \"http://ades.\" + platform_domain + \"/\" + USER_NAME + \"/zoo\"; print(\"ADES WPS endpoint:\", ades_wps_url)\n",
-    "ades_proc_url = \"http://ades.\" + platform_domain + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)"
+    "ades_base_url = \"http://ades.\" + platform_domain\n",
+    "ades_wps_url = ades_base_url + \"/\" + USER_NAME + \"/zoo\"; print(\"ADES WPS endpoint:\", ades_wps_url)\n",
+    "ades_proc_url = ades_base_url + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "common-recipe",
+   "id": "suitable-processing",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -114,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legitimate-neighborhood",
+   "id": "stupid-greeting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "posted-spokesman",
+   "id": "after-institution",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -133,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ultimate-butterfly",
+   "id": "governing-update",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-delicious",
+   "id": "documentary-syndication",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -153,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprised-excess",
+   "id": "absolute-exchange",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hazardous-genetics",
+   "id": "suspended-spine",
    "metadata": {
     "tags": []
    },
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-extraction",
+   "id": "spare-characteristic",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -186,17 +187,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-positive",
+   "id": "velvet-executive",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - Get Application Details\n",
-    "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, app_name, id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, app_name, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(json.dumps(response.json(), indent = 2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "environmental-recognition",
+   "id": "lovely-knitting",
+   "metadata": {},
+   "source": [
+    "#### ADES: Execute Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "organized-girlfriend",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Execute Application\n",
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=user_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "passive-vietnam",
+   "metadata": {},
+   "source": [
+    "#### ADES: Job Status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "balanced-cutting",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Job Status\n",
+    "response, ades_access_token, status = demo.proc_get_job_status(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(json.dumps(response.json(), indent = 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "natural-prompt",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Job Status (keep polling for completion)\n",
+    "trace = demo.trace_requests; demo.trace_requests = False\n",
+    "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=user_id_token, access_token=ades_access_token)\n",
+    "demo.trace_requests = trace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "legislative-upper",
+   "metadata": {},
+   "source": [
+    "#### ADES: Job Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abstract-storm",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Job Result\n",
+    "response, ades_access_token, stacCatalogUri = demo.proc_get_job_result(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(json.dumps(response.json(), indent = 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "headed-french",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -205,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-commissioner",
+   "id": "directed-neighborhood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intimate-commander",
+   "id": "cellular-hypothetical",
    "metadata": {
     "tags": []
    },
