EOEPCA-289 updates for develop cluster and state file handling

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "innocent-inquiry",
+   "id": "humanitarian-mixture",
    "metadata": {},
    "source": [
     "## User Management\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concrete-labor",
+   "id": "addressed-antenna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "original-paragraph",
+   "id": "swedish-trauma",
    "metadata": {},
    "source": [
     "## Client\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "light-nicaragua",
+   "id": "variable-passage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "global-retrieval",
+   "id": "better-williams",
    "metadata": {},
    "source": [
     "## User Authentication\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-standing",
+   "id": "pleased-interval",
    "metadata": {},
    "source": [
     "### Authenticate"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concrete-cartoon",
+   "id": "informed-mortgage",
    "metadata": {
     "tags": []
    },
@@ -77,7 +77,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as UserA and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"UserA\"\n",
+    "USER_NAME=\"demoA\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
     "print(\"user_id_token:\", user_id_token)"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-proxy",
+   "id": "rotary-holiday",
    "metadata": {},
    "source": [
     "### Inspect the ID Token"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numeric-title",
+   "id": "cutting-advancement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grateful-quality",
+   "id": "german-storm",
    "metadata": {},
    "source": [
     "The ID Token (JWT) identifies the user via user_name / sub (Subject) fields, and the client via the aud (Audience) field. The JWT is signed and can be verified, using the kid (Key ID) field, via the JWKS endpoint of the Authorization Server."
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weird-surprise",
+   "id": "separated-isolation",
    "metadata": {},
    "source": [
     "## Access Protected Endpoint\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "choice-secretary",
+   "id": "distant-martial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "individual-feedback",
+   "id": "spanish-recommendation",
    "metadata": {},
    "outputs": [],
    "source": [
