--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "universal-conducting",
+   "id": "conservative-bubble",
    "metadata": {},
    "source": [
     "# Processing\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aerial-cabin",
+   "id": "hearing-willow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-error",
+   "id": "institutional-pizza",
    "metadata": {},
    "source": [
     "## Initialise"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-alias",
+   "id": "consolidated-shareware",
    "metadata": {},
    "source": [
     "### Client\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "shared-notebook",
+   "id": "freelance-cooking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patient-wedding",
+   "id": "korean-vegetable",
    "metadata": {},
    "source": [
     "### User\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "driven-medication",
+   "id": "lasting-friend",
    "metadata": {
     "tags": []
    },
@@ -77,14 +77,14 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as UserA and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"UserA\"\n",
+    "USER_NAME=\"demoA\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "distinguished-fitting",
+   "id": "governing-judges",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "changed-exercise",
+   "id": "pleasant-sensitivity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suitable-processing",
+   "id": "visible-copyright",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-greeting",
+   "id": "cardiac-vision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "after-institution",
+   "id": "alternate-exhibit",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "governing-update",
+   "id": "raising-absorption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-syndication",
+   "id": "supreme-czech",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "absolute-exchange",
+   "id": "norman-maine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspended-spine",
+   "id": "korean-message",
    "metadata": {
     "tags": []
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spare-characteristic",
+   "id": "operational-minister",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "velvet-executive",
+   "id": "forty-swiss",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lovely-knitting",
+   "id": "received-suffering",
    "metadata": {},
    "source": [
     "#### ADES: Execute Application"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "organized-girlfriend",
+   "id": "auburn-journal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passive-vietnam",
+   "id": "irish-luxury",
    "metadata": {},
    "source": [
     "#### ADES: Job Status"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "balanced-cutting",
+   "id": "external-celebration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "natural-prompt",
+   "id": "operating-liberia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +249,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fitting-probability",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.status_code, response.headers, response.text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "legislative-upper",
+   "id": "sufficient-winter",
    "metadata": {},
    "source": [
     "#### ADES: Job Result"
@@ -259,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abstract-storm",
+   "id": "square-yesterday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "headed-french",
+   "id": "challenging-basin",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -279,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "directed-neighborhood",
+   "id": "bridal-middle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cellular-hypothetical",
+   "id": "suitable-gallery",
    "metadata": {
     "tags": []
    },
