EOEPCA-289 update to DemoClient function proc_list_processes()

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "humanitarian-mixture",
+   "id": "fourth-founder",
    "metadata": {},
    "source": [
     "## User Management\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addressed-antenna",
+   "id": "swiss-sender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-trauma",
+   "id": "modular-wages",
    "metadata": {},
    "source": [
     "## Client\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "variable-passage",
+   "id": "freelance-glance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "better-williams",
+   "id": "usual-brazil",
    "metadata": {},
    "source": [
     "## User Authentication\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleased-interval",
+   "id": "southeast-office",
    "metadata": {},
    "source": [
     "### Authenticate"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informed-mortgage",
+   "id": "incorporate-minutes",
    "metadata": {
     "tags": []
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-holiday",
+   "id": "similar-dealer",
    "metadata": {},
    "source": [
     "### Inspect the ID Token"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cutting-advancement",
+   "id": "governmental-balloon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "german-storm",
+   "id": "abstract-google",
    "metadata": {},
    "source": [
     "The ID Token (JWT) identifies the user via user_name / sub (Subject) fields, and the client via the aud (Audience) field. The JWT is signed and can be verified, using the kid (Key ID) field, via the JWKS endpoint of the Authorization Server."
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separated-isolation",
+   "id": "proper-origin",
    "metadata": {},
    "source": [
     "## Access Protected Endpoint\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distant-martial",
+   "id": "downtown-reunion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,14 @@
     "ades_proc_url = \"http://ades.\" + platform_domain + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)\n",
     "\n",
     "trace = demo.trace_flow; demo.trace_flow = True\n",
-    "response, process_ids, access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token)\n",
+    "response, access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token)\n",
     "demo.trace_flow = trace"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spanish-recommendation",
+   "id": "varied-mozambique",
    "metadata": {},
    "outputs": [],
    "source": [
