--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "conservative-bubble",
+   "id": "international-survivor",
    "metadata": {},
    "source": [
     "# Processing\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hearing-willow",
+   "id": "floppy-facing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "institutional-pizza",
+   "id": "marine-conservation",
    "metadata": {},
    "source": [
     "## Initialise"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consolidated-shareware",
+   "id": "grand-smell",
    "metadata": {},
    "source": [
     "### Client\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "freelance-cooking",
+   "id": "processed-chinese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-vegetable",
+   "id": "multiple-shower",
    "metadata": {},
    "source": [
     "### User\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lasting-friend",
+   "id": "executive-notification",
    "metadata": {
     "tags": []
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governing-judges",
+   "id": "greenhouse-posting",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleasant-sensitivity",
+   "id": "catholic-article",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "visible-copyright",
+   "id": "interim-permission",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-vision",
+   "id": "embedded-flexibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternate-exhibit",
+   "id": "standing-narrative",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -134,18 +134,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "raising-absorption",
+   "id": "extreme-exclusive",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - List Processes\n",
-    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-czech",
+   "id": "listed-shareware",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "norman-maine",
+   "id": "active-nature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,20 +165,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "korean-message",
+   "id": "featured-parade",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Check deploy - list processes again\n",
-    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "operational-minister",
+   "id": "congressional-portland",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forty-swiss",
+   "id": "dimensional-homework",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "received-suffering",
+   "id": "different-wheel",
    "metadata": {},
    "source": [
     "#### ADES: Execute Application"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "auburn-journal",
+   "id": "split-aspect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "irish-luxury",
+   "id": "false-associate",
    "metadata": {},
    "source": [
     "#### ADES: Job Status"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "external-celebration",
+   "id": "difficult-argentina",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,20 +238,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operating-liberia",
+   "id": "regional-madness",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - Job Status (keep polling for completion)\n",
-    "trace = demo.trace_requests; demo.trace_requests = False\n",
-    "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=user_id_token, access_token=ades_access_token)\n",
-    "demo.trace_requests = trace"
+    "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=user_id_token, access_token=ades_access_token)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fitting-probability",
+   "id": "victorian-austin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sufficient-winter",
+   "id": "painful-specialist",
    "metadata": {},
    "source": [
     "#### ADES: Job Result"
@@ -269,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "square-yesterday",
+   "id": "fuzzy-peace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "challenging-basin",
+   "id": "second-rolling",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -289,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bridal-middle",
+   "id": "final-madagascar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,14 +298,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suitable-gallery",
+   "id": "collect-instrument",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Check undeploy - list processes\n",
-    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
    ]
   }
